Unemployment rate in home view

--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -163,7 +163,7 @@
 <script type="text/template" id="result-template">
     <div id="result">
         <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.rate}}%</div>
-        <div id="resulparo" style="display: none;" class="r<%- level %>"><%- result %><span><%- leveltxt %></span></div>
+        <div id="resulparo" style="display: none;" class="r<%- level %>"><%- result %>%<span><%- leveltxt %></span></div>
         <div id="nav-results">
             <a class="link" href="{% url map %}" id="nav-map">Tu perfil<br/>en España</a>
             <a class="link" href="" id="nav-comp">Comparativa<br/>en tu provincia</a>
