--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -179,6 +179,13 @@
             <a class="link" href="{% url profile %}" id="nav-prov">Evolución<br/>perfil</a>
         </div>
     </div>
+    <div id="compartir">
+        <a href="https://twitter.com/share" class="twitter-share-button"
+           data-url="{{rate_query.get_absolute_url}}" data-text="Mi tasa de paro es del {{rate_query.rate}}%" data-via="kaleidosnet" data-size="large" data-hashtags="tasaparo">Tweet</a>
+        <script>
+            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        </script>
+    </div>
 </script>
 
 <script type="text/template" id="last-profiles-item">
