--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -71,20 +71,20 @@
             <li>Por niveles de estudio</li>
         </ul>
         <div id="compare">
-            <div class="bl" style="display: none; margin-right: 38px; margin-top: 126px; height: 126px; width: 126px; border-radius: 63px; background-color: #acde5c;">
-                <span class="percer" style="font-size: 38px; margin-top: 21px;">18%</span>
-                <span class="txt" style="font-size: 17px">Mujeres</span>
-            </div>
-            <div class="bl" style="display: none; height: 258px; width: 258px; border-radius: 129px; background-color: #c74a53;">
-                <span class="percer" style="font-size: 79px; margin-top: 39px;">82%</span>
-                <span class="txt" style="font-size: 36px">Hombres</span>
-            </div>
         </div>
     </div>
 </script>
 
+<script type="text/template" id="compare-item">
+    <div class="bl r<%- level %>" style="display: none; height: 200px; width: 200px; border-radius: 100px; margin-right:10px">
+        <span class="percer" style="font-size: 79px; margin-top: 30px;"><%- percent %>%</span>
+        <span class="txt" style="font-size: 28px"><%- sex %></span>
+    </div>
+</script>
+
 <script type="text/template" id="recalculate">
-    <form id="calculate" mehod="post" action="">
+    <form id="recalculate" method="get" action="{{get_compare_rates_url}}">
+        {% csrf_token %}
         <div class="field">
             <label>Provincia</label>
             {{form.province}}
@@ -101,7 +101,7 @@
             <label>Nivel de estudios</label>
             {{form.education}}
         </div>
-        <input type="submit" value="RECALCULAR" />
+        <input type="submit" value="COMPARAR" />
     </form>
 </script>
 
@@ -119,7 +119,7 @@
 <script type="text/template" id="search-template">
     <div id="search">
         <h1>Calcula tu tasa de paro</h1>
-        <form id="calculate" mehod="post" action="{{get_profile_rate_url}}">
+        <form id="calculate" method="post" action="{{get_profile_rate_url}}">
             <div class="field">
                 <label>Provincia</label>
                 {{form.province}}
@@ -184,7 +184,7 @@
 <script type="text/template" id="last-profiles-item">
     <div class="lresults">
         <!--<p class="tm">hace <%- time %></p>-->
-        <div class="result r<%- level%>"><%- percent %></div>
+        <div class="result r<%- level%>"><%- percent %>%</div>
         <div class="txt">
             <%- sex %><br/>
             <%- years %><br/>
