--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -39,7 +39,7 @@
 
 <script type="text/template" id="tabs">
 <ul id="tabmenu">
-    <li class="t1"><a class="link c<%- level %>" href="{% url home %}">Tu tasa: <span><%- result %>%</span></a></li>
+    <li class="t1"><a class="link c<%- level %>" href="{% url home %}">Tu tasa: <span><%- rate %>%</span></a></li>
     <li class="t2"><a class="link" href="{% url map %}">Tu perfil<br/>en España</a></li>
     <li class="t3"><a class="link" href="{% url compare %}">Comparativas</a></li>
     <li class="t4"><a class="link" href="{% url profile %}">Evolución<br/> de tu perfil</a></li>
