fix position twitter

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -337,3 +337,8 @@ form select {
     float: right;
     li { cursor: pointer; float: left; margin-right: 10px; border-radius: 4px; font-family:"Open Sans Semibold"; padding: 9px 19px; color: #FFF; background-color: #3d83fd; &.sel { background-color: #ccc; } }
 }
+
+#compartir{
+    width: 120px;
+    margin: 20px 0 0 20px;
+}
