--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -33,6 +33,8 @@
                     <li><a href="">Descarga el Widget</a>  |</li>
                     <li><a href="">API</a></li>
                 </ul>
+                <img src="{{STATIC_URL}}images/logo_kaleidos.png" >
+                <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
             </div>
         </div>
     </div>
@@ -100,7 +102,7 @@
             <label>Nivel de estudios</label>
             {{form.education}}
         </div>
-        <input type="submit" value="COMPARAR" />
+        <input type="submit" value="RECALCULAR" />
     </form>
 </script>
 
