--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -179,8 +179,7 @@
             <a class="link" href="{% url profile %}" id="nav-prov">Evolución<br/>perfil</a>
         </div>
         <div id="compartir">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="/" data-text="Mi tasa de paro es" data-via="kaleidosnet" data-hashtags="tasaparo">Tweet</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?url=<%- url %>" style="width:130px; height:20px;"></iframe>
         </div>
     </div>
 </script>
