--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -67,7 +67,7 @@
     <div id="left"></div>
     <div id="right">
         <ul id="compare-nav">
-            <li class="sel">Por sexo</li>
+            <li class="sel">Por género</li>
             <li>Por edades</li>
             <li>Por niveles de estudio</li>
         </ul>
@@ -91,7 +91,7 @@
             {{form.province}}
         </div>
         <div class="field">
-            <label>Sexo</label>
+            <label>Género</label>
             {{form.sex}}
         </div>
         <div class="field">
@@ -127,7 +127,7 @@
                 {{form.province}}
             </div>
             <div class="field">
-                <label>Sexo</label>
+                <label>Género</label>
                 {{form.sex}}
             </div>
             <div class="field">
