--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -341,3 +341,5 @@ form select {
 #compartir{
     margin: 20px 0 0 20px;
 }
+
+.logos { float: left; height: 34px; overflow: hidden; margin: 5px 0 0 20px; }
