--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -27,14 +27,16 @@
             <div id="inner-content"></div>
             <div id="footer">
                 <p>Tu tasa de Paro © 2012</p>
+                <div class="logos">
+                    <img src="{{STATIC_URL}}images/logo_kaleidos.png" >
+                    <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
+                </div>
                 <ul>
                     <li><a href="">Mas info</a>  |</li>
                     <li><a href="">Conócenos</a>  |</li>
                     <li><a href="">Descarga el Widget</a>  |</li>
                     <li><a href="">API</a></li>
                 </ul>
-                <img src="{{STATIC_URL}}images/logo_kaleidos.png" >
-                <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
             </div>
         </div>
     </div>
