--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -183,7 +183,7 @@
             <a class="link" href="{% url profile %}" id="nav-prov">Evolución<br/>perfil</a>
         </div>
         <div id="compartir">
-            <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?url=<%- url %>&hashtags=piweek&via=kaleidosnet&text=Mi tasa de paro es <%- rate %>%" style="width:130px; height:20px;"></iframe>
+            <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?url=<%- url %>&hashtags=piweek&via=kaleidosnet&text=Mi tasa de paro es <%- rate %>{{'%'|urlencode}}" style="width:130px; height:20px;"></iframe>
         </div>
     </div>
 </script>
