--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -26,7 +26,7 @@
         <div id="content">
             <div id="inner-content"></div>
             <div id="footer">
-                <p>Tu tasa de Paro © 2012</p>
+                <p>Tu tasa de Paro © 2012 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Carlos Gil Bellosta</p>
                 <div class="logos">
                     <img src="{{STATIC_URL}}images/logo_kaleidos.png" >
                     <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
