Arreglo del repositorio manualmente (yami-juanfran)

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -128,6 +128,7 @@ input[type=submit]{
     p { font-family:"Open Sans Italic"; font-size: 11px; color: #fff; padding-left: 20px; float: left; }
     li { font-family:"Open Sans Italic"; font-size: 11px; color: #646464; display: inline; }
     a { color: #646464; text-decoration: none; &:hover { text-decoration: underline; } }
+    .name { margin-left: 100px; }
 }
 
 #info {
