--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -1,22 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
 {% block content %}
-
-<div id="inner-content">
-    <div id="home-view">
-        <div id="search">
-            <h1>Quiénes somos</h1>
-            <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="">PiWeek</a> de <a href="">Kaleidos</a>.</p>
-            <p>Los que hemos desarrollado el proyecto:</p>
-            <ul>
-                <li><a href="">Yamila Moreno</a> (Kaleidos)</li>
-                <li><a href="">JuanFran Alcántara</a> (Kaleidos)</li>
-                <li><a href="">Eva Pérez</a> (Secuoyas)</li>
-                <li><a href="">Francis Vega</a> (Secuoyas)</li>
-                <li><a href="">Luis García Castro</a></li>
-                <li><a href="">Carlos Gil Bellosta</a></li>
-            </ul>
-        </div>
+<div id="home-view">
+    <div id="search">
+        <h1>Quiénes somos</h1>
+        <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="">PiWeek</a> de <a href="">Kaleidos</a>.</p>
+        <p>Los que hemos desarrollado el proyecto:</p>
+        <ul>
+            <li><a href="">Yamila Moreno</a> (Kaleidos)</li>
+            <li><a href="">JuanFran Alcántara</a> (Kaleidos)</li>
+            <li><a href="">Eva Pérez</a> (Secuoyas)</li>
+            <li><a href="">Francis Vega</a> (Secuoyas)</li>
+            <li><a href="">Luis García Castro</a></li>
+            <li><a href="">Carlos Gil Bellosta</a></li>
+            <li><a href="">Jesús Espino</a></li>
+        </ul>
     </div>
 </div>
 
