--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -34,8 +34,8 @@
                     <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
                 </div>
                 <ul>
-                    <li><a href="">Mas info</a>  |</li>
                     <li><a href="">Conócenos</a>  |</li>
+                    <li><a href="">Más info</a>  |</li>
                     <li><a href="">Descarga el Widget</a>  |</li>
                     <li><a href="">API</a></li>
                 </ul>
@@ -48,7 +48,7 @@
             <div id="resulparo" class="r1 question"><span>tu tasa</span>?</div>
         </div>
     </script>
-    
+
     {% compress js %}
     <script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/libs/jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="{{ STATIC_URL }}js/libs/raphael-min.js"></script>
