Refactor map javascript

--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -20,7 +20,6 @@
                 <li><a title="Conócenos" href="">Conócenos</a></li>
                 <li><a title="Más info" href="">Más info</a></li>
                 <li><a title="Descargar el Widget" href="">Descargar el Widget</a></li>
-                <li><a title="Api" href="">Api</a></li>
             </ul>
         </div>
         <div id="content">
@@ -36,8 +35,7 @@
                 <ul>
                     <li><a href="">Conócenos</a>  |</li>
                     <li><a href="">Más info</a>  |</li>
-                    <li><a href="">Descarga el Widget</a>  |</li>
-                    <li><a href="">API</a></li>
+                    <li><a href="">Descarga el Widget</a></li>
                 </ul>
             </div>
         </div>
