--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -1,18 +1,22 @@
-{% load compress %}
 {% load static from staticfiles %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Tasa paro</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
     <meta name="description" content="" />
-    {% compress css %}
-    <link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}css/styles.less" />
-    {% endcompress %}
+    <title>Tasa paro</title>
+
+    {% if DEBUG %}
+    <link type="text/less" rel="stylesheet/less" href="{% static 'css/styles.less' %}" />
+    <script src="{% static 'js/libs/less-1.3.1.min.js' %}"></script>
+    {% else %}
+    <link type="text/css" rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    {% endif %}
 </head>
 <body>
     <div id="headerbg"></div>
+
     <div id="container">
         <div id="header">
             <a title="home" class="link" href="{% url home %}"><img src="{{ STATIC_URL }}images/logo.png" alt="logo" /></a>
@@ -30,8 +34,8 @@
             <div id="footer">
                 <p>Tu tasa de Paro © 2012 <span class="name">Carlos Gil Bellosta</span></p>
                 <div class="logos">
-                    <img src="{{STATIC_URL}}images/logo_kaleidos.png" >
-                    <img src="{{STATIC_URL}}images/logo_secuoyas.png" >
+                    <img src="{% static 'images/logo_kaleidos.png' %}" >
+                    <img src="{% static 'images/logo_secuoyas.png' %}" >
                 </div>
                 <ul>
                     <li><a href="">Conócenos</a>  |</li>
@@ -41,6 +45,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/template" id="result-empty-template">
         <div id="result">
             <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.rate}}%</div>
@@ -49,6 +54,13 @@
     </script>
 
     <script src="{% static 'js/main.min.js' %}"></script>
+
+    {% if DEBUG %}
     <script src="{% static 'js/tasaparo.js"></script>
+    <script src="{% static 'js/mapdata.js"></script>
+    <script src="{% static 'js/app.js"></script>
+    {% else %}
+    <script src="{% static 'js/tasaparo.min.js' %}"></script>
+    {% endif %}
 </body>
 </html>
