--- a/src/tasaparo/web/templates/recalculate-form.html
+++ b/src/tasaparo/web/templates/recalculate-form.html
@@ -1,4 +1,4 @@
-<form id="calculate" method="get" action="{{get_compare_rates_url}}">
+<form id="calculate" method="get">
     <div class="field">
         <label>Provincia</label>
         {{form.province}}
