Menu with class='sel' for selected option

--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
-
+{% block menu %}
+    <li><a title="Inicio" href="{% url home %}">Inicio</a></li>
+    <li><a class="sel" title="Conócenos" href="{% url about %}">Conócenos</a></li>
+    <li><a title="Más info" href="">Más info</a></li>
+    <li><a title="Descargar el Widget" href="{% url widget %}">Descargar el Widget</a></li>
+{% endblock %}
 {% block content %}
 <div id="home-view">
     <div id="search">
