--- a/src/tasaparo/web/templates/profile.html
+++ b/src/tasaparo/web/templates/profile.html
@@ -1,4 +1,10 @@
 {% extends "layout.html" %}
+{% block menu %}
+    <li><a class="sel" title="Inicio" href="{% url home %}">Inicio</a></li>
+    <li><a title="Conócenos" href="{% url about %}">Conócenos</a></li>
+    <li><a title="Más info" href="">Más info</a></li>
+    <li><a title="Descargar el Widget" href="{% url widget %}">Descargar el Widget</a></li>
+{% endblock %}
 {% block content %}
     {% include "menu.html" with option='profile' %}
     <div id='profile-view'>
