--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -87,7 +87,7 @@ body { background: url('../images/ttpbg.jpg') no-repeat; }
 
 input[type=submit]{
     margin: 13px 0 0 30px;
-    border: 1px solid #005eff;        
+    border: 1px solid #005eff;
     border-radius: 4px;
     line-height: 49px;
     height: 49px;
@@ -156,6 +156,7 @@ input[type=submit]{
     width: 204px;
     padding-left: 24px;
     float: left;
+    cursor: pointer;
     .txt { font-size: 11px; font-family:"Open Sans Italic"; width: 100%; float: left; margin-top: 19px; }
     .result { width: 116px; height: 116px; border-radius: 58px; line-height: 116px; font-size: 61px; font-family: 'BreeSerif-Regular'; color: #FFF; text-align: center; float: left; cursor: pointer; }
     .tm { font-size: 11px; font-family:"Open Sans Italic"; margin-bottom: 10px; text-align: center; width: 116px; color: #a1a1a1; }
@@ -187,7 +188,7 @@ input[type=submit]{
     width: 11px;
     height: 11px;
     position: relative;
-    bottom: -6px; 
+    bottom: -6px;
     margin: 0 auto;
     -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);
 }
@@ -217,10 +218,10 @@ input[type=submit]{
     input[type=submit]{ margin: 32px 0 0 0; }
 }
 
-#right { 
+#right {
     width: 720px;
     float: right;
-    padding: 45px 43px 0 0;    
+    padding: 45px 43px 0 0;
 }
 #chart { width: 690px; height: 285px; }
 
@@ -262,26 +263,26 @@ input[type=submit]{
     }
     .t2 {
         a { background: url('../images/tab1a.png') no-repeat 30px center; padding-left: 80px; width: 97px; }
-        &.sel { 
+        &.sel {
             a {
-                background: #FFF url('../images/tab1b.png') no-repeat 30px center; 
+                background: #FFF url('../images/tab1b.png') no-repeat 30px center;
             }
         }
 
     }
     .t3 {
         a { background: url('../images/tab2a.png') no-repeat 30px center; padding-left: 80px; width: 128px; }
-        &.sel { 
+        &.sel {
             a {
-                background: #FFF url('../images/tab2b.png') no-repeat 30px center; 
+                background: #FFF url('../images/tab2b.png') no-repeat 30px center;
             }
         }
     }
     .t4 {
         a { background: url('../images/tab3a.png') no-repeat 30px center; padding-left: 103px; width: 100px; }
-        &.sel { 
+        &.sel {
             a {
-                background: #FFF url('../images/tab3b.png') no-repeat 30px center; 
+                background: #FFF url('../images/tab3b.png') no-repeat 30px center;
             }
         }
     }
@@ -292,7 +293,7 @@ input[type=submit]{
         text-decoration: none;
         display: block;
         padding-top: 24px;
-        height: 44px; 
+        height: 44px;
         width: 177px;
         font-size: 13px;
         color: #000;
@@ -307,7 +308,7 @@ input[type=submit]{
             a {
                 border-bottom: 1px solid #FFF;
                 border-top: 3px solid #0c64fc;
-                background: #FFF url('../images/tab3b.png') no-repeat 30px center; 
+                background: #FFF url('../images/tab3b.png') no-repeat 30px center;
                 color: #0c64fc;
             }
         }
@@ -328,7 +329,7 @@ form select {
 #compare {
     float: right;
     margin-top: 40px;
-    width: 500px;   
+    width: 500px;
     .bl { float: left; }
     span { color: #FFF; font-family: 'BreeSerif-Regular'; width: 100%; text-align: center; display: block; float: left; }
 }
