--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -35,9 +35,9 @@
                     <img src="{% static 'images/logo_secuoyas.png' %}" >
                 </div>
                 <ul>
-                    <li><a href="">Conócenos</a>  |</li>
-                    <li><a href="">Más info</a>  |</li>
-                    <li><a href="">Descarga el Widget</a></li>
+                    <li><a href="{% url about %}">Conócenos</a>  |</li>
+                    <li><a href="{% url moreinfo %}">Más info</a>  |</li>
+                    <li><a href="{% url widget %}">Descarga el Widget</a></li>
                 </ul>
             </div>
         </div>
