--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -3,7 +3,7 @@
 {% block menu %}
     <li><a class="sel" title="Inicio" href="{% url home %}">Inicio</a></li>
     <li><a title="Conócenos" href="{% url about %}">Conócenos</a></li>
-    <li><a title="Más info" href="">Más info</a></li>
+    <li><a title="Más info" href="{% url moreinfo %}">Más info</a></li>
     <li><a title="Descargar el Widget" href="{% url widget %}">Descargar el Widget</a></li>
 {% endblock %}
 {% block content %}
@@ -44,7 +44,8 @@
                 <a class="link" href="{% url profile query_hash %}" id="nav-prov">Evolución<br/>perfil</a>
             </div>
             <div id="compartir">
-                <iframe allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/tweet_button.html?hashtags=piweek&via=kaleidosnet&text=Mi tasa de paro es <%- rate %>{{'%'|urlencode}} <%- url %>" style="width:130px; height:20px;"></iframe>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-text="Mi tasa de paro es {{calculated_query.rate}}%" data-via="kaleidosnet" data-hashtags="ttdp" data-count="none" data-lang="en">Tweet</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
         {% else %}
@@ -55,8 +56,8 @@
     <div id="last">
         <h2>Últimas consultas</h2>
         {% for query in latest_queries %}
-        <div class="lresults">
-            <div class="result r{{query.level}}" rel="{{ query.absolute_url }}">{{query.rate}}%</div>
+        <div class="lresults" rel="{{ query.absolute_url }}">
+            <div class="result r{{query.level}}">{{query.rate}}%</div>
             <div class="txt">
                 {{query.sex}}<br/>
                 {{query.age}}<br/>
