--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <div id="home-view">
-    <div id="search">
+    <div id="info-ttdp">
         <h1>Quiénes somos</h1>
         <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="">PiWeek</a> de <a href="">Kaleidos</a>.
         En la primera edición hicimos un prototipo funcional con diseño y datos parciales.</p>
@@ -16,14 +16,38 @@
         <p>Y en el tintero nos dejamos mejorar las opciones de filtrado, optimizar las velocidades y lo que venga...</p>
         <p>Los que hemos desarrollado el proyecto:</p>
         <ul>
-            <li>Yamila Moreno <a href="http://twitter.com/yamila_moreno" target="_new">@yamila_moreno</a></li>
-            <li><a href="">JuanFran Alcántara</a> (Kaleidos)</li>
-            <li>Eva Pérez <a href="http://twitter.com/evampp" target="_new">@evampp</a></li>
-            <li>Francis Vega <a href="http://twitter.com/francis_vega" target="_new">@francis_vega</a></li>
-            <li>Luis García Castro <a href="http://twitter.com/luiyo" target="_new">@luiyo</a></li>
-            <li>Carlos Gil Bellosta <a href="http://twitter.com/gilbellosta" target="_new">@gilbellosta</a>
-                (<a href="http://www.datanalytics.com/" target="_new">Web</a>)</li>
-            <li>Andrey Antoukh <a href="http://twitter.com/niwibe" target="_new">@niwibe</a></li>
+            <li>
+                <h3>Yamila Moreno</h3>
+                <a href="http://twitter.com/yamila_moreno" target="_new">@yamila_moreno</a>
+            </li>
+            <li>
+                <h3>JuanFran Alcántara</h3>
+                <a href="http://kaleidos.net/40826D/" target="_new">(Kaleidos)</a>
+            </li>
+            <li>
+                <h3>Eva Pérez</h3>
+                <a href="http://twitter.com/evampp" target="_new">@evampp</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h3>Francis Vega</h3>
+                <a href="http://twitter.com/francis_vega" target="_new">@francis_vega</a>
+            </li>
+                <li><h3>Luis García Castro</h3>
+                <a href="http://twitter.com/luiyo" target="_new">@luiyo</a>
+            </li>
+            <li>
+                <h3>Carlos Gil Bellosta</h3>
+                <a href="http://twitter.com/gilbellosta" target="_new">@gilbellosta</a>
+                <a href="http://www.datanalytics.com/" target="_new">(Data Analytics)</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h3>Andrey Antoukh</h3>
+                <a href="http://twitter.com/niwibe" target="_new">@niwibe</a>
+            </li>
         </ul>
     </div>
 </div>
