--- a/src/tasaparo/web/templates/widget.html
+++ b/src/tasaparo/web/templates/widget.html
@@ -7,14 +7,14 @@
 {% endblock %}
 {% block content %}
 <div id="widget-view" data-url="{{ get_widget_html }}">
-    <div id="search">
+    <div id="info-ttdp">
         <h1>Descarga el widget</h1>
 
         {% include "recalculate-form.html" %}
 
-
-        <div id="widget-html">
-
+        <div id="widget-wrapper">
+            <p>Copia y pega este script tan chupi en tu página web para mostrar tu tasa de paro:</p>
+            <textarea id="widget-html"></textarea>
         </div>
 
     </div>
