--- a/src/tasaparo/web/templates/compare.html
+++ b/src/tasaparo/web/templates/compare.html
@@ -17,9 +17,9 @@
         </div>
         <div id="right">
             <ul id="compare-nav">
-                <li class="sel">Por género</li>
-                <li>Por edades</li>
-                <li>Por niveles de estudio</li>
+                <li class="sel" id="by-sex" data-url="{{ get_compare_gender_url }}">Por género</li>
+                <li id="by-age" data-url="{{ get_compare_age_url }}">Por edades</li>
+                <li id="by-education" data-url="{{ get_compare_education_url }}">Por niveles de estudio</li>
             </ul>
             <div id="compare">
             </div>
