Compare views bysex, byage and byeducation

--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -40,7 +40,7 @@
             <div id="resulparo" class="r{{calculated_query.compare_to_general.0}}">{{calculated_query.rate}}%<span>{{calculated_query.compare_to_general.1}}</span></div>
             <div id="nav-results">
                 <a class="link" href="{% url map query_hash %}" id="nav-map">Tu perfil<br/>en España</a>
-                <a class="link" href="{% url compare query_hash %}" id="nav-comp">Comparativas</a>
+                <a class="link" href="{% url compare query_hash %}" id="nav-comp">Distribuciones</a>
                 <a class="link" href="{% url profile query_hash %}" id="nav-prov">Evolución<br/>perfil</a>
             </div>
             <div id="compartir">
