--- a/src/tasaparo/web/templates/compare.html
+++ b/src/tasaparo/web/templates/compare.html
@@ -10,14 +10,14 @@
     <div id='compare-view'>
         <div id="head2">
             <a class="link" href="{% url profile-rate-by-hash query_hash %}">&lt; volver</a>
-            <h1>Comparativa</h1>
+            <h1>Distribuciones</h1>
         </div>
         <div id="left">
             {% include "recalculate-form.html" %}
         </div>
         <div id="right">
             <ul id="compare-nav">
-                <li class="sel" id="by-sex" data-url="{{ get_compare_gender_url }}">Por género</li>
+                <li id="by-sex" data-url="{{ get_compare_sex_url }}">Por género</li>
                 <li id="by-age" data-url="{{ get_compare_age_url }}">Por edades</li>
                 <li id="by-education" data-url="{{ get_compare_education_url }}">Por niveles de estudio</li>
             </ul>
@@ -29,7 +29,7 @@
     <script type="text/template" id="compare-item">
         <div class="bl r<%- level %>" style="display: none; height: 200px; width: 200px; border-radius: 100px; margin-right:10px">
             <span class="percer" style="font-size: 79px; margin-top: 30px;"><%- rate %>%</span>
-            <span class="txt" style="font-size: 28px"><%- sex %></span>
+            <span class="txt" style="font-size: 28px"><%- byLabel %></span>
         </div>
     </script>
 {% endblock %}
