fixing static files

--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <title>Tasa paro</title>
 
-    {% if DEBUG %}
+    {% if debug %}
     <link type="text/less" rel="stylesheet/less" href="{% static 'css/styles.less' %}" />
     <script src="{% static 'js/libs/less-1.3.1.min.js' %}"></script>
     {% else %}
