--- a/src/tasaparo/web/templates/widget.html
+++ b/src/tasaparo/web/templates/widget.html
@@ -13,7 +13,7 @@
         {% include "recalculate-form.html" %}
 
         <div id="widget-wrapper">
-            <p>Copia y pega este script tan chupi en tu página web para mostrar tu tasa de paro:</p>
+            <p>Copia y pega este script en tu página web para mostrar tu tasa de paro:</p>
             <textarea id="widget-html"></textarea>
         </div>
 
