--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -9,7 +9,7 @@
 <div id="home-view">
     <div id="info-ttdp">
         <h1>Quiénes somos</h1>
-        <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="">PiWeek</a> de <a href="">Kaleidos</a>.
+        <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="http://piweek.es">PiWeek</a> de <a href="http://kaleidos.net">Kaleidos</a>.
         En la primera edición hicimos un prototipo funcional con diseño y datos parciales.</p>
         <p>En esta segunda edición hemos mejorado la carga de datos convirtiéndolo en un proceso rápido; gracias a esto, tenemos todos los datos disponibles.
         También publicamos la opción de incrustar un pequeño widget con un perfil en webs externas.</p>
