--- a/src/tasaparo/web/templates/compare.html
+++ b/src/tasaparo/web/templates/compare.html
@@ -27,7 +27,7 @@
     </div>
     {% include "info.html" %}
     <script type="text/template" id="compare-item">
-        <div class="bl r<%- level %>" style="display: none; height: 200px; width: 200px; border-radius: 100px; margin-right:10px">
+        <div class="bl r<%- level %>" style="display: none; height: 200px; width: 200px; border-radius: 100px; margin-right:10px; margin-bottom:10px;">
             <span class="percer" style="font-size: 79px; margin-top: 30px;"><%- rate %>%</span>
             <span class="txt" style="font-size: 28px"><%- byLabel %></span>
         </div>
