--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -422,3 +422,26 @@ form select {
 }
 
 .logos { float: left; height: 34px; overflow: hidden; margin: 5px 0 0 20px; }
+
+
+// LOADING OVERLAY
+.modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 )
+                url('http://i.stack.imgur.com/FhHRx.gif')
+                50% 50%
+                no-repeat;
+}
+
+body.loading {
+    overflow: hidden;
+}
+body.loading .modal {
+    display: block;
+}
