--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -43,6 +43,8 @@
         </div>
     </div>
 
+    <div class="modal"><!-- Place at bottom of page --></div>
+
     <script type="text/template" id="result-empty-template">
         <div id="result">
             <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.rate}}%</div>
