--- a/src/tasaparo/web/templates/moreinfo.html
+++ b/src/tasaparo/web/templates/moreinfo.html
@@ -2,16 +2,16 @@
 {% block menu %}
     <li><a title="Inicio" href="{% url home %}">Inicio</a></li>
     <li><a title="Conócenos" href="{% url about %}">Conócenos</a></li>
-    <li><a class="sel" title="Más info" href="{% url widget %}">Más info</a></li>
+    <li><a class="sel" title="Más info" href="{% url moreinfo %}">Más info</a></li>
     <li><a title="Descargar el Widget" href="{% url widget %}">Descargar el Widget</a></li>
 {% endblock %}
 {% block content %}
 <div id="home-view">
-    <div id="search">
-        <h1>Más info</h1>
-        <p>
-
-        </p>
+    <div id="info-ttdp">
+        <h1>Más información</h1>
+	<p>Cada tres meses el <a href="http://ine.es" target="_new">INE</a> publica los resultados de la Encuesta de Población Activa, EPA. Estos resultados incluyen, entre otras cosas, información sobre la tasa de paro.</p>
+<p>La nota de prensa que emite el INE, y que luego reproducen los medios, se centra en aquellos aspectos de la EPA más relevantes para la gestión de la economía. Sin embargo, esta información pasa por alto aspectos que nos importan a ti y a mí como ciudadanos concretos: ¿cómo está el mercado laboral para aquellos que tienen nuestro perfil?</p>
+<p>En Tu Tasa de Paro te damos esa información. Utilizamos los microdatos de la EPA, filtramos, agregamos y seleccionamos aquellas variables más relevantes para determinar cuál es la tasa de paro que te afecta a ti, por tu perfil específico, y te proporcionamos herramientas para que veas cómo ha evolucionado este perfil a través del tiempo y en qué provincias esta tasa es más favorable.</p>
     </div>
 </div>
 
