--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -9,7 +9,8 @@
 <div id="home-view">
     <div id="info-ttdp">
         <h1>Quiénes somos</h1>
-        <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="http://piweek.es">PiWeek</a> de <a href="http://kaleidos.net">Kaleidos</a>.
+        <p>Tu Tasa de Paro es un proyecto desarrollado en el marco de la <a href="http://piweek.es" target="_new">PiWeek</a> 
+	de <a href="http://kaleidos.net" target="_new">Kaleidos</a>.
         En la primera edición hicimos un prototipo funcional con diseño y datos parciales.</p>
         <p>En esta segunda edición hemos mejorado la carga de datos convirtiéndolo en un proceso rápido; gracias a esto, tenemos todos los datos disponibles.
         También publicamos la opción de incrustar un pequeño widget con un perfil en webs externas.</p>
@@ -19,6 +20,7 @@
             <li>
                 <h3>Yamila Moreno</h3>
                 <a href="http://twitter.com/yamila_moreno" target="_new">@yamila_moreno</a>
+		(<a href="http://kaleidos.net/D70A53/" target="_new">Kaleidos</a>)
             </li>
             <li>
                 <h3>JuanFran Alcántara</h3>
@@ -33,6 +35,7 @@
             <li>
                 <h3>Francis Vega</h3>
                 <a href="http://twitter.com/francis_vega" target="_new">@francis_vega</a>
+		(<a href="http://www.secuoyas.com" target="_new">Secuoyas</a>)
             </li>
                 <li><h3>Luis García Castro</h3>
                 <a href="http://twitter.com/luiyo" target="_new">@luiyo</a>
@@ -47,6 +50,7 @@
             <li>
                 <h3>Andrey Antoukh</h3>
                 <a href="http://twitter.com/niwibe" target="_new">@niwibe</a>
+		(<a href="http://kaleidos.net/A5694F/" target="_new">Kaleidos</a>)
             </li>
         </ul>
     </div>
