Added logo to widget. Widget shown when generated

--- a/src/tasaparo/web/static/css/widget.css
+++ b/src/tasaparo/web/static/css/widget.css
@@ -5,6 +5,9 @@ div#kaleidos-tasaparo {
     width: 116px;
     height:151px;
     margin: 10px;
+/*
+    background: url('../images/bgheader.png') repeat-x;
+*/
 }
 
 .lresults .txt {
