--- a/src/tasaparo/web/templates/widget.html
+++ b/src/tasaparo/web/templates/widget.html
@@ -15,8 +15,9 @@
         <div id="widget-wrapper">
             <p>Copia y pega este script en tu página web para mostrar tu tasa de paro:</p>
             <textarea id="widget-html"></textarea>
-        </div>
 
+            <div id="example-widget"></div>
+        </div>
     </div>
 </div>
 
