Fixed home.html style

--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 <div id="home-view">
-    <div id="search"
+    <div id="info-ttdp"
         {% if calculated_query %}level="{{calculated_query.compare_to_general.0}}" leveltxt="{{calculated_query.compare_to_general.1}}" rate="{{calculated_query.rate}}"{% endif %}>
         <h1>Calcula tu tasa de paro</h1>
         <form id="calculate" method="get" action="{{get_profile_rate_url}}">
